<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2A2A"
    tools:context=".screen2">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="93dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif"
        android:text="@string/today"
        android:textAlignment="center"
        android:textColor="#F8F7F7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="343dp"
        android:layout_height="37dp"
        android:fontFamily="sans-serif"
        android:text="@string/get_a_clear_view_of_the_day_ahead"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:fontFamily="sans-serif"
        android:text="@string/all_your_tasks_that_are_due_today_will_show_up_here"
        android:textAlignment="center"
        android:textColor="#BCB9B9"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#DF3636"
        android:text="@string/add_your_notes"
        android:textColor="#F8F6F6"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>