<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2A2A"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="121dp"
        android:layout_height="57dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button2"
        android:layout_width="303dp"
        android:layout_height="61dp"
        android:backgroundTint="#2B2A2A"
        android:fontFamily="sans-serif"
        android:text="@string/continue_with_google"
        android:textColor="#FBFBFB"
        android:textSize="13sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:icon="@android:drawable/ic_dialog_email"
        app:iconGravity="textStart"
        app:iconSize="20dp"
        app:iconTint="#FBFBFB"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.571"
        app:strokeColor="#3A3434"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_to_todoist"
        android:textAlignment="center"
        android:textColor="#F1EBEB"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:contentDescription="@string/logo"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        app:srcCompat="@drawable/images__1_" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:backgroundTint="#DF3636"
        android:fontFamily="sans-serif"
        android:text="@string/continue_with_email"
        android:textColor="#FBFAFA"
        android:textSize="13sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:icon="@android:drawable/ic_dialog_email"
        app:iconGravity="textStart"
        app:iconSize="20dp"
        app:iconTint="#FBFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.649" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:contentDescription="@string/apple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="294dp"
        android:layout_height="53dp"
        android:fontFamily="sans-serif"
        android:text="@string/by_continuing_you_agree_to_todoist_s_terms_of_services_https_todoist_com_terms_and_privacy_policy_https_todoist_com_privacy"
        android:textAlignment="center"
        android:textColor="#BDB8B8"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>